tests/test-dirs/upstream-typing-recovery/original-tests/coercion_failure.compilers.reference
File "coercion_failure.ml", line 1:
Error: Multiple errors were encountered
File "coercion_failure.ml", line 12, characters 13-17:
12 |     let x = ([`B] :> [`A]) in
                  ^^^^
  This expression cannot be coerced to type [ `A ]; it has type [> `B ] list
  but is here used with type [< `A ]
File "coercion_failure.ml", line 16, characters 19-21:
16 |   let t : string = 10
                        ^^
  The constant 10 has type int but an expression was expected of type string
File "coercion_failure.ml", line 19, characters 17-19:
19 | let t : string = 10
                      ^^
  The constant 10 has type int but an expression was expected of type string
